changed color to black

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <style>
 	.modify_this{
-		color: rgb(0, 208, 255);
+		color: black;
 		font-weight: bold;
 		background-color: powderblue;
 	}
